# pytorch-cosma

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: convnext_model.yaml  example_conv_autoencoder.yaml  example_gatconv_network.yaml  example_gatconv_node_and_edge.yaml  example_model.yaml  example_multimodal_gat.yaml  example_swin_transformer.yaml  example_twin_network.yaml  example_vit_model.yaml  example_vit_model_manual.yaml
examples/: build_multi_modal_gat.py  cifar10_swin.py  cifar10_vit.py  cifar10_vit_manual.py  conjoined_network_on_mnist.py  mnist_autoencode_and_latent_inspection.py  train_and_compare_classifiers_on_mnist.py  train_gatconv_on_cora.py  train_gatconv_on_cora_nodes_only.py  train_gatconv_on_cora_with_edge_prediction.py  train_resnet_classifier_on_mnist.py  twin_network_on_mnist.py
pytorch_cosma/: autoencoders.py  basic_layers.py  config_validation.py  graphs.py  model_yaml_parser.py  multi_modal_gat_layers  network_construction.py  utils.py  vision_transformer.py
src/: autoencoders.py  basic_layers.py  config_validation.py  graphs.py  latent_space.py  layers.py  model_yaml_parser.py  network_construction.py  vision_transformer.py
unit_testing/examples/: test_cifar10_swin.py  test_cifar10_vit.py  test_gatconv_on_cora_nodes_only.py  test_gatconv_on_cora_with_edge_prediction.py  test_mnist_autoencode_and_latent_inspection.py  test_train_and_compare_classifiers_on_mnist.py  test_train_resnet_classifier_on_mnist.py  test_twin_network_on_mnist.py
utilities/: twin_dataset_maker.py
