[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytorch-cosma"
version = "0.1.11"
description = "A deep learning framework built on top of PyTorch."
authors = [
    { name = "Ra'ad Costello-Mahmoud", email = "mahmoud.raad@yahoo.co.uk" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp",
    "dash",
    "Flask",
    "matplotlib",
    "networkx",
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-nvtx-cu12",
    "opencv-python",
    "packaging",
    "pandas",
    "pillow",
    "psutil",
    "pydantic",
    "PyYAML",
    "requests",
    "scikit-learn",
    "scikit-learn-intelex",
    "scipy",
    "torch>=2.5.1",
    "torch-geometric>=2.6.1",
    "torchaudio>=2.5.1",
    "torchvision>=0.20.1",
    "tqdm",
    "umap-learn",
]

[project.urls]
homepage = "https://github.com/raadcostellomahmoud/pytorch-cosma"
repository = "https://github.com/raadcostellomahmoud/pytorch-cosma"


[tool.setuptools.packages]
find = { include = ["pytorch_cosma"] }  # Only include this package